--- a/website/src/components/SideMenu/index.less
+++ b/website/src/components/SideMenu/index.less
@@ -39,7 +39,10 @@
 
                 span {
                     font-size: 16px !important;
-                    color: #737380;
+                }
+
+                html[data-theme="dark"] & span {
+                    color: rgba(255, 255, 255, 0.85) !important;
                 }
             }
 
