--- a/website/src/styles/App.less
+++ b/website/src/styles/App.less
@@ -64,3 +64,7 @@ body {
 .ant-table-filter-dropdown {
   padding: 0.5em !important;
 }
+
+html[data-theme="dark"] .heade-title.ant-typography-secondary {
+  color: rgba(255,255,255,0.85) !important;
+}
